plot overflow scroll fix

--- a/app/assets/stylesheets/plots.css.less
+++ b/app/assets/stylesheets/plots.css.less
@@ -1,5 +1,5 @@
-#total-plot-container {
-  margin-top: 25px;
+.tab-pane[id$='plot'] {
+  overflow: hidden;
 }
 
 .plot {
@@ -27,6 +27,13 @@
   z-index: 999;
 }
 
+
+/* multiple plots on tab */
+#total-plot-container {
+  margin-top: 25px;
+}
+
+/* screening popup */
 #popup {
   display: none;
   position: absolute;
